create Local webserver by configuration; do NLS